# PAT

./: .gitignore  CMakeLists.txt  README.md
Advanced/: 1001.c  1002.c  1003.c  1004.c  1005.c  1006.c  1008.c  1009.c
Basic/: 1001.c  1002.c  1003.c  1005.c  1007.c  1010.c  1012.c  1014.c  1020.c  1021.c  1026.c  1029.c  1031.c  1032.c  1034.c  1035.c  1036.c  1037.c  1041.c  1042.c
BasicLevel/: 1001.c  1002.c  1003.c  1004.c  1005.c  1006.c  1007.c  1008.c  1009.c  1010.c  1011.c  1012.c  1013.c  1014.c  1015.c  1016.c  1017.c  1018.c  1019.c  1020.c  1021.c  1022.c  1023.c  1024.c  1025.c  1027.c  1028.c  1029.c  1030.c  1033.c  1034.c  1038.c  1039.c  1043.c
