cmake_minimum_required(VERSION 3.14)
project(PAT)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(1001 BasicLevel/1001.c)
add_executable(1002 BasicLevel/1002.c)
add_executable(1003 BasicLevel/1003.c)
add_executable(1004 BasicLevel/1004.c)
add_executable(1005 BasicLevel/1005.c)
add_executable(1006 BasicLevel/1006.c)
add_executable(1007 BasicLevel/1007.c)
add_executable(1008 BasicLevel/1008.c)
add_executable(1009 BasicLevel/1009.c)
add_executable(1010 BasicLevel/1010.c)
add_executable(1011 BasicLevel/1011.c)
add_executable(1012 BasicLevel/1012.c)
add_executable(1013 BasicLevel/1013.c)
add_executable(1014 BasicLevel/1014.c)
add_executable(1015 BasicLevel/1015.c)
add_executable(1016 BasicLevel/1016.c)
add_executable(1017 BasicLevel/1017.c)
add_executable(1018 BasicLevel/1018.c)
add_executable(1019 BasicLevel/1019.c)
add_executable(1020 BasicLevel/1020.c)
add_executable(1021 BasicLevel/1021.c)