cmake_minimum_required(VERSION 3.14)
project(PAT)

set(CMAKE_CXX_STANDARD 14)

add_executable(1001 BasicLevel/1001.c)
add_executable(1002 BasicLevel/1002.c)
add_executable(1003 BasicLevel/1003.c)
add_executable(1004 BasicLevel/1004.c)
add_executable(1005 BasicLevel/1005.c)
add_executable(1006 BasicLevel/1006.c)
add_executable(1007 BasicLevel/1007.c)
add_executable(1008 BasicLevel/1008.c)
add_executable(1009 BasicLevel/1009.c)
add_executable(1010 BasicLevel/1010.c)
add_executable(1011 BasicLevel/1011.c)
add_executable(1012 BasicLevel/1012.c)
add_executable(1013 BasicLevel/1013.c)
add_executable(1014 BasicLevel/1014.c)
add_executable(1015 BasicLevel/1015.c)
add_executable(1016 BasicLevel/1016.c)
add_executable(1017 BasicLevel/1017.c)
add_executable(1018 BasicLevel/1018.c)
add_executable(1019 BasicLevel/1019.c)
add_executable(1020 BasicLevel/1020.c)
add_executable(1021 BasicLevel/1021.c)
add_executable(1022 BasicLevel/1022.c)
add_executable(1023 BasicLevel/1023.c)
add_executable(1024 BasicLevel/1024.c)
add_executable(1025 BasicLevel/1025.c)
add_executable(1026 BasicLevel/1026.c)
add_executable(1027 BasicLevel/1027.c)
add_executable(1028 BasicLevel/1028.c)
add_executable(1029 BasicLevel/1029.c)
add_executable(1030 BasicLevel/1030.c)
add_executable(1031 BasicLevel/1031.c)
add_executable(1032 BasicLevel/1032.c)
add_executable(1033 BasicLevel/1033.c)
add_executable(1034 BasicLevel/1034.c)
add_executable(1035 BasicLevel/1035.c)
add_executable(1036 BasicLevel/1036.c)
add_executable(1037 BasicLevel/1037.c)
add_executable(1038 BasicLevel/1038.c)
add_executable(1039 BasicLevel/1039.c)
add_executable(1041 BasicLevel/1041.c)
add_executable(1042 BasicLevel/1042.c)
add_executable(1043 BasicLevel/1043.c)
