cmake_minimum_required(VERSION 3.14)
project(PAT)

set(CMAKE_CXX_STANDARD 14)

add_executable(B1001 Basic/1001.c)
add_executable(B1002 Basic/1002.c)
add_executable(B1003 Basic/1003.c)
add_executable(B1004 Basic/1004.c)
add_executable(B1005 Basic/1005.c)
add_executable(B1006 Basic/1006.c)
add_executable(B1007 Basic/1007.c)
add_executable(B1008 Basic/1008.c)
add_executable(B1009 Basic/1009.c)
add_executable(B1010 Basic/1010.c)
add_executable(B1011 Basic/1011.c)
add_executable(B1012 Basic/1012.c)
add_executable(B1013 Basic/1013.c)
add_executable(B1014 Basic/1014.c)
add_executable(B1015 Basic/1015.c)
add_executable(B1016 Basic/1016.c)
add_executable(B1017 Basic/1017.c)
add_executable(B1018 Basic/1018.c)
add_executable(B1019 Basic/1019.c)
add_executable(B1020 Basic/1020.c)
add_executable(B1021 Basic/1021.c)
add_executable(B1022 Basic/1022.c)
add_executable(B1023 Basic/1023.c)
add_executable(B1024 Basic/1024.c)
add_executable(B1025 Basic/1025.c)
add_executable(B1026 Basic/1026.c)
add_executable(B1027 Basic/1027.c)
add_executable(B1028 Basic/1028.c)
add_executable(B1029 Basic/1029.c)
add_executable(B1030 Basic/1030.c)
add_executable(B1031 Basic/1031.c)
add_executable(B1032 Basic/1032.c)
add_executable(B1033 Basic/1033.c)
add_executable(B1034 Basic/1034.c)
add_executable(B1035 Basic/1035.c)
add_executable(B1036 Basic/1036.c)
add_executable(B1037 Basic/1037.c)
add_executable(B1038 Basic/1038.c)
add_executable(B1039 Basic/1039.c)
add_executable(B1041 Basic/1041.c)
add_executable(B1042 Basic/1042.c)
add_executable(B1043 Basic/1043.c)
add_executable(A1001 Advanced/1001.c)
